@@ -5,6 +5,7 @@ Nagios Change Log
 
 2.0 - ??/??/????
 ----------------
+* Removed older extended info support
 * CGIs can now determine config file and external command file locations
   from environment variables (Russell Scibetti)
 * Host and services use chained hash for faster lookups (Daniel Drown)
